--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,9 @@ test/test.cpp)
 source_group(src FILES ${TEST_SOURCES})
 add_executable(kiwi_loader_test ${TEST_SOURCES})
 target_include_directories(kiwi_loader_test PRIVATE ${PROJECT_SOURCE_DIR})
+else("${CMAKE_SYSTEM}" MATCHES "Linux")
+	target_link_libraries(kiwi_loader_test ${CMAKE_DL_LIBS})
+endif()
 set_target_properties(kiwi_loader_test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/libs/")
 set_target_properties(kiwi_loader_test PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/libs/")
 set_target_properties(kiwi_loader_test PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/libs/")
