--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,7 +8,7 @@ os: Visual Studio 2015
 
 build_script:
     - mkdir build && cd build
-    - cmake -DCMAKE_BUILD_TYPE=Debug -G %COMPILER% ..
+    - cmake -DCMAKE_BUILD_TYPE=Debug -G "%COMPILER%" ..
     - cmake --build .
     - ../libs/kiwi_loader_test ../libs
 
